# haskell-vm

./: .gitignore  Main.hs  README.md  haskell-vm.cabal
Core/Analysis/: Lexer.hs  Parser.hs
Core/Error/: Error.hs  Types.hs
Core/Runtime/: Interpreter.hs  VM.hs
Types/: Bytecode.hs  Stack.hs
core/: Interpreter.hs  Lexer.hs  Parser.hs
tests/: Sample.hsc
types/: Bytecode.hs  Stack.hs  Value.hs
