cabal-version:      2.4
name:               haskell-vm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thomasvergne
maintainer:         thomas@quark-lang.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-vm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Core.Interpreter
        Core.Lexer
        Core.Parser
        Types.Bytecode
        Types.Stack
        Types.Value
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , vector
      , mtl
    default-language: Haskell2010
